CSDEV/objects/HAE_User_Operating_Unit__c.object
<CustomObject>
    <description>HAE: This is the junction object between User &amp; Operating Unit.</description>
    <fields>
        <fullName>HAE_Operating_Unit__c</fullName>
        <description>HAE: It looks up to specific Operating Unit.</description>
        <label>Operating Unit</label>
        <referenceTo>HAE_Operating_Unit__c</referenceTo>
        <relationshipLabel>User Operating Units</relationshipLabel>
        <relationshipName>User_Operating_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HAE_Unique_identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>HAE:This field will be used to store concatenated id&apos;s of user and operating unit and prevent duplication of user operating unit</description>
        <externalId>true</externalId>
        <label>Unique identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HAE_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HAE: It looks upto User record.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Operating_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Operating Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HAE_Operating_Unit__c</columns>
        <columns>HAE_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UON-{00000000}</displayFormat>
        <label>User Operating Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Operating Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HAE_User_record_cannot_be_blank</fullName>
        <active>true</active>
        <description>HAE:User record is mandatory for creating user  operating unit record</description>
        <errorConditionFormula>HAE_User__c = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>HAE_User__c</errorDisplayField>
        <errorMessage>Please associate an user record</errorMessage>
    </validationRules>
</CustomObject>